--- a/DataManagement/templates/DataManagement/TestView.html
+++ b/DataManagement/templates/DataManagement/TestView.html
@@ -23,7 +23,10 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 				[4, 5, 6, 7],
 				[6, 7, 8, 9],
 				[8, 9, 10, 11],
-				[10, 11, 12, 13]
+				[10, 11, 12, 13],
+				[2, 3, 4, 2],
+				[10, 11, 12, 13],
+				[2, 3, 4, 2]
   	        ]
 		};
 		$scope.range = function(min, max, step){
@@ -32,47 +35,98 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 			for (var i = min; i < max; i += step) input.push(i);
 			return input;
 		};
+		$scope.showInitial = true;
+		$scope.toggleText = "Show selected";
+		$scope.tableRefresh = function(){
+			$scope.showInitial = !$scope.showInitial;
+			if ($scope.toggleText == "Show selected"){
+				$scope.toggleText = "Show all";
+			}
+			else{
+				$scope.toggleText = "Show selected"
+			}
+			if ($scope.showInitial == true){
+				for (var i = 0; i < $scope.columnTable.columns.length; i++) {
+					$scope.columnTable.columns[i].show = true;
+				}
+			}
+			
+		};
 	}])
 	.directive('smoDataTable', function () {
 		return {
 	        restrict: 'E',
 	        link: function(scope, element, attr) {
 	        	// TODO: Implement 
+	        	
 	        }
 		}
 	});
 	
 </script>
+<style>
+.scrollable {
+   	max-height:300px;
+   	max-width: 400px;
+    overflow:auto;
+}
+.no-margin {
+	margin-left:-20px; 
+	margin-right:-20px;
+}
+
+</style>
 {% endblock %}
 
 {% block content %}
-<br>
-<h1>Test page</h1>
+
 <div ng-app="testApp" ng-controller="testController">
 
-<smo-hdf-browser tree-id="hdfView"></smo-hdf-browser>
+<div class="container">
+<div class="row">
 
-<br>
+<h1>Test page</h1>
+
+</div>
+<div class="row">
 <h2> Data table </h2>
 <br>
-<div>
-<span ng-repeat="column in columnTable.columns">
-<span ng-bind="column.name"></span>
-<input type="checkbox" ng-model="column.show">
-&nbsp;&nbsp;&nbsp;
-</span>
-	<table>
-		<tr >
-			<td ng-repeat="column in columnTable.columns" ng-show="column.show">
-				<table>
-					<tr ng-repeat="dataValue in column.data">
-						<td style="padding:10px 5px 15px 20px;"><div ng-bind="dataValue"></div></td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-	</table>
+</div>
+<div class="row">
+	<div class="col-md-4">
+		<div class="scrollable">
+		<table class="table table-bordered" style="width:auto;" >
+		
+			<tr ng-show="showInitial" class="active" >
+				<th ng-repeat="column in columnTable.columns"  style="padding:10px 5px 15px 20px;">
+					<span ng-bind="column.name"></span><input type="checkbox" ng-model="column.show">
+				</th>
+			</tr>
+			<tr ng-hide="showInitial" class="active" >
+				<th ng-if="column.show" ng-repeat="column in columnTable.columns" style="padding:10px 5px 15px 20px;">
+					<span ng-bind="column.name"></span>
+				</th>
+			</tr>
+			<tr ng-show="showInitial" ng-repeat="dataValue in columnTable.data" >
+				<td ng-repeat = "rowValue in dataValue track by $index" style="padding:10px 5px 15px 20px;" >
+					<div ng-show="columnTable.columns[$index].show" ng-bind="rowValue"></div>
+					<div ng-hide="columnTable.columns[$index].show"></div>
+				</td>
+			</tr>
+			<tr ng-hide="showInitial" ng-repeat="dataValue in columnTable.data" >
+				<td ng-if="columnTable.columns[$index].show" ng-repeat = "rowValue in dataValue track by $index" style="padding:10px 5px 15px 20px;" >
+					<div ng-show="columnTable.columns[$index].show" ng-bind="rowValue"></div>
+					<div ng-hide="columnTable.columns[$index].show"></div>
+				</td>
+			</tr>				
+		</table>		
+		</div>
+
+	</div>
+</div>
+<br>
+<div class="row">
+	<button class="btn btn-default" ng-click="tableRefresh()" ng-bind="toggleText"></button>
 </div>
 
-</div>
 {% endblock %}
