--- a/templates/Base.html
+++ b/templates/Base.html
@@ -15,6 +15,8 @@
     <!-- AngularJS -->
     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+<!--     <script src="/data/Workspace/Django/django-example/SmoWebExtra/js/angular.js"></script> -->
+    
 	<script src="{% static "ui-bootstrap-tpls-0.11.0.min.js" %}"></script>
 	
 	{% block scripts_and_styles %}
