data explorer table with star-pattern numerical formats
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -18,7 +18,18 @@
 <!--     <script src="/data/Workspace/Django/django-example/SmoWebExtra/js/angular.js"></script> -->
     
 	<script src="{% static "ui-bootstrap-tpls-0.11.0.min.js" %}"></script>
-	
+	<style>	
+		html{
+	  		height: 100vh;
+	  		width: 100vw;
+	  		
+		}
+		body {
+	  		height: 100vh;
+	  		width: 100vw;
+	  		
+		}
+	</style>
 	{% block scripts_and_styles %}
 	{% endblock %}	 
 	</head>
