--- a/templates/Platform.html
+++ b/templates/Platform.html
@@ -18,7 +18,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Management <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
         <li><a href="{% url 'DataManagement:ImportCSV' %}">Import CSV</a></li>
-        <li><a href="#">Another action</a></li>
+        <li><a href="{% url 'DataManagement:HdfInterfaceView' %}">Data Explorer</a></li>
         <li><a href="#">Something else here</a></li>
         <li class="divider"></li>
         <li class="dropdown-header">Nav header</li>
