Created Quantity class in JS and defined some standard quantities.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/DataManagement/templates/DataManagement/ImportCSV.html
+++ b/DataManagement/templates/DataManagement/ImportCSV.html
@@ -3,11 +3,11 @@
 {% load staticfiles %}
 
 {% block scripts_and_styles %}
-<link rel="stylesheet" href="{% static "DataManagement/ImportCSV.css" %}"> 
-<script src="{% static "angular-file-upload.min.js" %}"></script>
-<script src="{% static "SmoUtil.js" %}"></script>
-<script src="{% static "DataManagement/ImportCSV.js" %}"></script>
-<script src="{% static "smo-treeview/smo.treeview.js" %}"></script>
+<link rel="stylesheet" href="{% static 'DataManagement/ImportCSV.css' %}"> 
+<script src="{% static 'angular-file-upload.min.js' %}"></script>
+<script src="{% static 'SmoUtil.js' %}"></script>
+<script src="{% static 'DataManagement/ImportCSV.js' %}"></script>
+<script src="{% static 'smo-treeview/smo.treeview.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'smo-treeview/smo.treeview.css' %}">
 <style>
 .pull-left {
